[package]
name = "emperor-staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "emperor_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.9.2"
anchor-lang = {version = "^0.24.2", features = ["init-if-needed"]}
anchor-spl = "0.24.1"
spl-token-metadata = { version = "0.0.1", features = [ "no-entrypoint" ] }
mpl-token-metadata = { version = "1.3.0", features = ["no-entrypoint"] }
metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }